--- a/templates/cart.html
+++ b/templates/cart.html
@@ -1,71 +1,88 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{current_user.user_account}}的購物車</title>
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
+    <meta name="description" content=""/>
+    <meta name="author" content=""/>
+    <title>Bookmazon</title>
+    <!-- Favicon-->
+    <link rel="icon" type="image/x-icon" href="assets/favicon.ico"/>
+    <!-- Bootstrap icons-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Core theme CSS (includes Bootstrap)-->
+    <link href="{{ url_for('static', filename='css/styles.css') }}" rel="stylesheet"/>
+    <link href="{{ url_for('static', filename='css/slide.css') }}" rel="stylesheet"/>
+    <link href="{{ url_for('static', filename='css/book.css') }}" rel="stylesheet"/>
+    <style>
+        .content-body {
+            min-height: 80vh;
+        }
+
+
+    </style>
 </head>
 <body>
-    <div class="container mt-5">
-        <h2>{{current_user.user_account}}的購物車</h2>
-        {% with messages = get_flashed_messages(with_categories=true) %}
-            {% for category, message in messages %}
-            <div class="alert alert-{{ category }} alert-dismissible fade show" role="alert">
-                {{ message }}
-                <button type="button" class="btn-close" data-bs-dismiss="alert"
-                        aria-label="Close"></button>
-            </div>
-            {% endfor %}
-            {% endwith %}
-        {% if cart_items|length > 0 %}
-            <table class="table">
-                <thead>
-                    <tr>
-                        <th>書名</th>
-                        <th>價格</th>
-                        <th>數量</th>
-                        <th>小計</th>
-                        <th>刪除商品</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    {% for cart_item, item, book in cart_items %}
-                        <tr>
-                            <td>{{ book.book_name }}</td>
-                            <td>{{ book.book_price }}</td>
-                            <td>{{ cart_item.quantity }}</td>
-                            <td>{{ cart_item.quantity * book.book_price }}</td>
-                            <td>
-                                <form action="{{ url_for('cartController.remove_from_cart', cart_item_id=cart_item.cart_item_id) }}" method="post">
-                                    <button type="submit" class="btn btn-danger">刪除</button>
-                                </form>
-                            </td>
-                        </tr>
-                    {% endfor %}
-                </tbody>
-
-            </table>
-            <div class="d-flex justify-content-end">
-                <h4 class="me-2">總計：</h4>
-                <h4>{{ total_price }}</h4>
-            </div>
-            <div class="d-flex justify-content-between mt-3">
-                <a href="{{ url_for('productController.getProducts') }}" class="btn btn-secondary">繼續購物</a>
-
-                <!-- TODO : 結帳功能-->
-                <a href="#" class="btn btn-primary">前往結帳</a>
-            </div>
-        {% else %}
-            <div class="alert alert-warning" role="alert">
-                {{current_user.user_account}}的購物車是空的！
-            </div>
-            <a href="{{ url_for('productController.getProducts') }}" class="btn btn-primary">返回商店</a>
-        {% endif %}
+{% include '/product/header.html' %}
+<div class="container mt-5 content-body">
+    <h2>購物車</h2>
+    {% with messages = get_flashed_messages(with_categories=true) %}
+    {% for category, message in messages %}
+    <div class="alert alert-{{ category }} alert-dismissible fade show" role="alert">
+        {{ message }}
+        <button type="button" class="btn-close" data-bs-dismiss="alert"
+                aria-label="Close"></button>
     </div>
+    {% endfor %}
+    {% endwith %}
+    {% if cart_items|length > 0 %}
+    <table class="table">
+        <thead>
+        <tr>
+            <th>書名</th>
+            <th>價格</th>
+            <th>數量</th>
+            <th>小計</th>
+            <th>刪除商品</th>
+        </tr>
+        </thead>
+        <tbody>
+        {% for cart_item, item, book in cart_items %}
+        <tr>
+            <td>{{ book.book_name }}</td>
+            <td>{{ book.book_price }}</td>
+            <td>{{ cart_item.quantity }}</td>
+            <td>{{ cart_item.quantity * book.book_price }}</td>
+            <td>
+                <form action="{{ url_for('cartController.remove_from_cart', cart_item_id=cart_item.cart_item_id) }}"
+                      method="post">
+                    <button type="submit" class="btn btn-danger">刪除</button>
+                </form>
+            </td>
+        </tr>
+        {% endfor %}
+        </tbody>
 
-    <!-- Bootstrap JS -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"></script>
+    </table>
+    <div class="d-flex justify-content-end">
+        <h4 class="me-2">總計：</h4>
+        <h4>{{ total_price }}</h4>
+    </div>
+    <div class="d-flex justify-content-between mt-3">
+        <a href="{{ url_for('productController.getProducts') }}" class="btn btn-secondary">繼續購物</a>
+
+        <!-- TODO : 結帳功能-->
+        <a href="#" class="btn btn-primary">前往結帳</a>
+    </div>
+    {% else %}
+    <div class="alert alert-warning" role="alert">
+        {{current_user.user_account}}的購物車是空的！
+    </div>
+    <a href="{{ url_for('productController.getProducts') }}" class="btn btn-primary">返回商店</a>
+    {% endif %}
+</div>
+{% include 'common/footer.html' %}
+
 </body>
 </html>
