--- a/templates/login/forget_password.html
+++ b/templates/login/forget_password.html
@@ -18,22 +18,23 @@
                         <div class="row justify-content-center">
                             <div class="col-lg-5">
                                 <div class="card shadow-lg border-0 rounded-lg mt-5">
-                                    <div class="card-header"><h3 class="text-center font-weight-light my-4">Password Recovery</h3></div>
+                                    <div class="card-header"><h3 class="text-center font-weight-light my-4">忘記密碼</h3></div>
                                     <div class="card-body">
-                                        <div class="small mb-3 text-muted">Enter your email address and we will send you a link to reset your password.</div>
-                                        <form>
+                                        <div class="small mb-3 text-muted">請輸入你的信箱</div>
+                                        <form method="POST" action="{{url_for('userController.forget_password')}}">
+                                            {{ form.csrf_token }}
                                             <div class="form-floating mb-3">
-                                                <input class="form-control" id="inputLastName" type="password" placeholder="Enter your password" />
-                                                <label for="inputLastName">password</label>
+                                                {{ form.user_email(class="form-control", placeholder="Enter your email") }}
+                                                <label>信箱</label>
                                             </div>
                                             <div class="d-flex align-items-center justify-content-between mt-4 mb-0">
-                                                <a class="small" href="login.html">Return to login</a>
-                                                <a class="btn btn-primary" href="login.html">Reset Password</a>
+                                                <a href="{{ url_for('userController.login') }}">Return to login</a>
+                                                <button type="submit" class="d-grid btn btn-primary btn-block">發送至您的信箱</button>
                                             </div>
                                         </form>
                                     </div>
                                     <div class="card-footer text-center py-3">
-                                        <div class="small"><a href="register.html">Need an account? Sign up!</a></div>
+                                        <a href="{{ url_for('userController.register') }}">需要帳號嗎? 立即註冊!</a>
                                     </div>
                                 </div>
                             </div>
