--- a/templates/401.html
+++ b/templates/401.html
@@ -19,7 +19,7 @@
                             <div class="col-lg-6">
                                 <div class="text-center mt-4">
                                     <h1 class="display-1">401</h1>
-                                    <p class="lead">Unauthorized</p>
+                                    <p class="lead">缺少重設密碼令牌</p>
                                     <p>Access to this resource is denied.</p>
                                     <a href="{{ url_for('userController.login') }}">
                                         <i class="fas fa-arrow-left me-1"></i>
