--- a/templates/order/viewOrder.html
+++ b/templates/order/viewOrder.html
@@ -26,6 +26,16 @@
     <div class="container mt-4">
         <h2>{{ current_user.user.user_account }}的訂單</h2>
 
+        {% with messages = get_flashed_messages(with_categories=true) %}
+        {% for category, message in messages %}
+        <div class="alert alert-{{ category }} alert-dismissible fade show" role="alert">
+            {{ message }}
+            <button type="button" class="btn-close" data-bs-dismiss="alert"
+                    aria-label="Close"></button>
+        </div>
+        {% endfor %}
+        {% endwith %}
+
         {% if orders|length > 0 %}
             <table class="table table-hover mt-4">
                 <thead>
