--- a/templates/order/viewOrderDetails.html
+++ b/templates/order/viewOrderDetails.html
@@ -60,6 +60,33 @@
         <div class="d-flex justify-content-between mt-3">
             <a href="{{ url_for('productController.getProducts') }}" class="btn btn-primary">返回首頁</a>
             <h4>訂單總價: {{ order.order_total_price }}</h4>
+
+            <!-- Cancel Order Button to trigger modal -->
+            {% if order.order_status == '0' %}
+                <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#cancelOrderModal">
+                    取消訂單
+                </button>
+            {% endif %}
+            <!-- Bootstrap Modal -->
+            <div class="modal fade" id="cancelOrderModal" tabindex="-1" aria-labelledby="cancelOrderModalLabel" aria-hidden="true">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="cancelOrderModalLabel">Confirm Cancellation</h5>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body">
+                            Do you really want to cancel the order?
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">否</button>
+                            <form action="{{ url_for('orderController.cancel_order', order_id=order.order_id) }}" method="post">
+                                <button type="submit" class="btn btn-danger">是，取消訂單</button>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
 
     </div>
